--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ script: "bundle exec rake test"
 cache: bundler
 sudo: false
 rvm:
+  - '2.3.3'
   - '2.3.0'
   - '2.2'
   - '2.1'
@@ -12,6 +13,8 @@ gemfile:
   - gemfiles/am_4_0.gemfile
   - gemfiles/am_4_1.gemfile
   - gemfiles/am_4_2.gemfile
+  - gemfiles/activemodel_5.2.3.gemfile
+
 
 notifications:
   email: false
